--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
+    def support_ver = "24.2.1"
+    compile "com.android.support:appcompat-v7:$support_ver"
+    compile "com.android.support:design:$support_ver"
+
     compile 'com.google.dagger:dagger:2.7'
     apt 'com.google.dagger:dagger-compiler:2.7'
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
 }
