--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     def support_ver = "24.2.1"
     compile "com.android.support:appcompat-v7:$support_ver"
     compile "com.android.support:design:$support_ver"
+    compile "com.android.support:recyclerview-v7:$support_ver"
 
     compile 'com.google.dagger:dagger:2.7'
     apt 'com.google.dagger:dagger-compiler:2.7'
