--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,12 @@ dependencies {
     compile 'com.google.dagger:dagger:2.7'
     apt 'com.google.dagger:dagger-compiler:2.7'
 
+    compile 'com.squareup.moshi:moshi:1.2.0'
+
+    def retrofit_ver = "2.1.0"
+    compile "com.squareup.retrofit2:retrofit:$retrofit_ver"
+    compile "com.squareup.retrofit2:converter-moshi:$retrofit_ver"
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
