--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.7'
 
     compile 'com.squareup.moshi:moshi:1.2.0'
+    compile 'com.google.code.gson:gson:2.7:'
 
     def retrofit_ver = "2.1.0"
     compile "com.squareup.retrofit2:retrofit:$retrofit_ver"
