Add hatebu service
ちなみにPathでUrlを指定するようにしてしまうと、URLがエンコーディングされてしまうのでうまくいかない
QueryにすればQuery文字列として渡されるので、レスポンスを受け取ることが出来た

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,14 @@ dependencies {
     compile 'com.squareup.moshi:moshi:1.2.0'
     compile 'com.google.code.gson:gson:2.7:'
 
+    def okhttp_ver = "3.4.1"
+    compile "com.squareup.okhttp3:okhttp:$okhttp_ver"
+    compile "com.squareup.okhttp3:logging-interceptor:$okhttp_ver"
+
     def retrofit_ver = "2.1.0"
     compile "com.squareup.retrofit2:retrofit:$retrofit_ver"
     compile "com.squareup.retrofit2:converter-moshi:$retrofit_ver"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit_ver"
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
