Update retrofit using call adapter by rxjava

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,13 @@ dependencies {
     compile 'com.google.dagger:dagger:2.7'
     apt 'com.google.dagger:dagger-compiler:2.7'
 
+    compile 'io.reactivex:rxjava:1.2.0'
+
+    // json
     compile 'com.squareup.moshi:moshi:1.2.0'
     compile 'com.google.code.gson:gson:2.7:'
 
+    // network
     def okhttp_ver = "3.4.1"
     compile "com.squareup.okhttp3:okhttp:$okhttp_ver"
     compile "com.squareup.okhttp3:logging-interceptor:$okhttp_ver"
@@ -45,6 +49,7 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:$retrofit_ver"
     compile "com.squareup.retrofit2:converter-moshi:$retrofit_ver"
     compile "com.squareup.retrofit2:converter-gson:$retrofit_ver"
+    compile "com.squareup.retrofit2:adapter-rxjava:$retrofit_ver"
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
