--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.7'
 
     compile 'io.reactivex:rxjava:1.2.0'
+    compile 'io.reactivex:rxandroid:1.2.1'
 
     // json
     compile 'com.squareup.moshi:moshi:1.2.0'
