--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             </intent-filter>
 
         </activity>
+        <activity android:name=".activities.HatebuFeedDetailActivity">
+        </activity>
     </application>
 
 </manifest>
