--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$support_ver"
     compile "com.android.support:design:$support_ver"
     compile "com.android.support:recyclerview-v7:$support_ver"
+    compile "com.android.support:cardview-v7:$support_ver"
 
     compile 'com.google.dagger:dagger:2.7'
     apt 'com.google.dagger:dagger-compiler:2.7'
