--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,11 @@ dependencies {
         exclude module: 'xpp3'
     }
 
+    def junit4 = 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    androidTestCompile junit4
+    testCompile junit4
     testCompile "org.robolectric:robolectric:3.1.2"
 }
