--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     compile 'io.reactivex:rxjava:1.2.0'
     compile 'io.reactivex:rxandroid:1.2.1'
 
+    def orma_version = '3.0.0'
+    apt "com.github.gfx.android.orma:orma-processor:$orma_version"
+    compile "com.github.gfx.android.orma:orma:$orma_version"
+
     // json
     compile 'com.squareup.moshi:moshi:1.2.0'
     compile 'com.google.code.gson:gson:2.7:'
