--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.2.1'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.jakewharton.threetenabp:threetenabp:1.0.4'
 
     def orma_version = '3.0.0'
     apt "com.github.gfx.android.orma:orma-processor:$orma_version"
