--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.2.2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.github.gfx.ribbonizer:plugin:0.6.0'
+        classpath 'com.cookpad.android.licensetools:license-tools-plugin:0.18.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
