--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.github.gfx.ribbonizer'
 apply plugin: 'com.cookpad.android.licensetools'
+apply plugin: 'io.fabric'
 
 android {
     apply from: "${System.getenv('HOME')}/.android-mykey/FilteredHatebu.sign.gradle", to: android
@@ -20,6 +21,7 @@ android {
         debug {
             minifyEnabled false
             applicationIdSuffix ".debug"
+            ext.enableCrashlytics = false
         }
         release {
             minifyEnabled true
@@ -82,6 +84,10 @@ dependencies {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
+    }
+
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
+        transitive = true;
     }
 
     def junit4 = 'junit:junit:4.12'
