--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.github.gfx.ribbonizer'
 apply plugin: 'com.cookpad.android.licensetools'
 apply plugin: 'io.fabric'
@@ -46,7 +45,7 @@ dependencies {
     compile "com.android.support:customtabs:$support_ver"
 
     compile 'com.google.dagger:dagger:2.7'
-    apt 'com.google.dagger:dagger-compiler:2.7'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
 
     compile 'com.jakewharton.timber:timber:4.3.1'
     compile 'io.reactivex:rxjava:1.2.1'
@@ -55,7 +54,7 @@ dependencies {
     compile 'com.jakewharton.threetenabp:threetenabp:1.0.4'
 
     def orma_version = '3.0.0'
-    apt "com.github.gfx.android.orma:orma-processor:$orma_version"
+    annotationProcessor "com.github.gfx.android.orma:orma-processor:$orma_version"
     compile "com.github.gfx.android.orma:orma:$orma_version"
 
     // json
