--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,9 +109,16 @@ dependencies {
     }
 
     def junit4 = 'junit:junit:4.12'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    def espresso_ver = '2.2.2'
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_ver", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    androidTestCompile "com.android.support.test.espresso:espresso-contrib:$espresso_ver", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    }
     androidTestCompile junit4
     testCompile junit4
     testCompile "org.robolectric:robolectric:3.1.2"
