--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,4 +122,5 @@ dependencies {
     androidTestCompile junit4
     testCompile junit4
     testCompile "org.robolectric:robolectric:3.1.2"
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
