Avoid #10 do not use Picasso
Picasoを使う場合,はじめに画面に表示される部分は正常に表示される
次にスクロールして表れるもの（Nexus5でいうと7個目のアイテムのtest6, 8, 9, 10の4つ）が1つずつ下のfaviconが表示される
10はたまに正常に表示されることもある
ずれて表示されている時、Picassoのメモリキャッシュから画像が読み込まれている
ではメモリキャッシュから読み込まれるときにファビコンのズレが生じるのかと言えばそうではない
一番下までスクロールした後、上に戻っていくとメモリキャッシュからファビコンが表示されるが、このときファビコンのズレは生じないし、はじめにずれて表示されていたファビコンも正常に表示される

Picasoで非同期読み込みした処理がうまくキャンセルされず、古いリクエストがそのまま走っているのではないかと思うが、よくわからないのでPicassoを使わず自分で画像を読み込みキャッシュして表示するようにした

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.2.2'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     compile 'com.jakewharton.threetenabp:threetenabp:1.0.4'
 
     def orma_version = '3.0.0'
