--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.github.gfx.ribbonizer'
 apply plugin: 'com.cookpad.android.licensetools'
-apply plugin: 'io.fabric'
 apply plugin: 'com.github.triplet.play'
 
 ext {
@@ -59,7 +58,7 @@ android {
         }
         release {
             minifyEnabled true
-            useProguard false
+            useProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
@@ -108,6 +107,9 @@ dependencies {
     compile "com.android.support:cardview-v7:$support_ver"
     compile "com.android.support:customtabs:$support_ver"
 
+    def play_services_version = "10.0.1"
+    compile "com.google.firebase:firebase-crash:$play_services_version"
+
     compile 'com.google.dagger:dagger:2.7'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
 
@@ -148,10 +150,6 @@ dependencies {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
-    }
-
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
-        transitive = true;
     }
 
     def junit4 = 'junit:junit:4.12'
@@ -195,3 +193,4 @@ tasks.withType(com.android.build.gradle.internal.tasks.databinding.DataBindingEx
         })
     }
 }
+apply plugin: 'com.google.gms.google-services'
