--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,11 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'com.github.gfx.ribbonizer:plugin:0.6.0'
         classpath 'com.cookpad.android.licensetools:license-tools-plugin:0.18.0'
-        classpath 'io.fabric.tools:gradle:1.22.0'
         classpath 'com.github.triplet.gradle:play-publisher:1.1.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
