Fix build failed on ci
play-services.jsonがCI上にないからビルドに失敗する
google-servicesプラグインをCIでは読み込まないようにしたら回避できるような気がするがどうだろうか

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -194,4 +194,7 @@ tasks.withType(com.android.build.gradle.internal.tasks.databinding.DataBindingEx
         })
     }
 }
-apply plugin: 'com.google.gms.google-services'
+
+if (!ciBuild || travisBuild) {
+    apply plugin: 'com.google.gms.google-services'
+}
