--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,7 @@ dependencies:
     - echo y | android -s update sdk -u -a -t "tools"
     - echo y | android -s update sdk -u -a -t "platform-tools"
     - echo y | android -s update sdk -u -a -t "extra-android-m2repository"
+    - echo y | android -s update sdk -u -a -t "extra-google-google_play_services"
 test:
   override:
     - ./gradlew testMockDebugUnitTest
