--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,6 +168,7 @@ dependencies {
     testCompile junit4
     testCompile "org.robolectric:robolectric:3.1.2"
     testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.threeten:threetenbp:1.3.3'
 }
 
 /*
