--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.android_gradle_version = "3.0.1"
     repositories {
         jcenter()
+        google()
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath "com.android.tools.build:gradle:$android_gradle_version"
         classpath 'com.github.gfx.ribbonizer:plugin:0.6.0'
         classpath 'com.cookpad.android.licensetools:license-tools-plugin:0.18.0'
         classpath 'com.github.triplet.gradle:play-publisher:1.1.5'
@@ -19,6 +21,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
         maven { url 'https://maven.fabric.io/public' }
     }
 }
