--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,56 +108,56 @@ play {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     def support_ver = "25.1.0"
-    compile "com.android.support:appcompat-v7:$support_ver"
-    compile "com.android.support:design:$support_ver"
-    compile "com.android.support:recyclerview-v7:$support_ver"
-    compile "com.android.support:cardview-v7:$support_ver"
-    compile "com.android.support:customtabs:$support_ver"
+    implementation "com.android.support:appcompat-v7:$support_ver"
+    implementation "com.android.support:design:$support_ver"
+    implementation "com.android.support:recyclerview-v7:$support_ver"
+    implementation "com.android.support:cardview-v7:$support_ver"
+    implementation "com.android.support:customtabs:$support_ver"
 
     def play_services_version = "10.0.1"
-    compile "com.google.firebase:firebase-core:$play_services_version"
-    compile "com.google.firebase:firebase-crash:$play_services_version"
+    implementation "com.google.firebase:firebase-core:$play_services_version"
+    implementation "com.google.firebase:firebase-crash:$play_services_version"
 
-    compile 'com.google.dagger:dagger:2.7'
+    implementation 'com.google.dagger:dagger:2.7'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
 
-    compile 'com.jakewharton.timber:timber:4.3.1'
-    compile 'io.reactivex:rxjava:1.2.2'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
-    compile 'com.jakewharton.threetenabp:threetenabp:1.0.4'
+    implementation 'com.jakewharton.timber:timber:4.3.1'
+    implementation 'io.reactivex:rxjava:1.2.2'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.0.4'
 
     def orma_version = '3.0.0'
     annotationProcessor "com.github.gfx.android.orma:orma-processor:$orma_version"
-    compile "com.github.gfx.android.orma:orma:$orma_version"
+    implementation "com.github.gfx.android.orma:orma:$orma_version"
 
     // json
-    compile 'com.squareup.moshi:moshi:1.2.0'
-    compile 'com.google.code.gson:gson:2.7:'
+    implementation 'com.squareup.moshi:moshi:1.2.0'
+    implementation 'com.google.code.gson:gson:2.7:'
 
     // network
     def okhttp_ver = "3.4.1"
-    compile "com.squareup.okhttp3:okhttp:$okhttp_ver"
-    compile "com.squareup.okhttp3:logging-interceptor:$okhttp_ver"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_ver"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_ver"
 
-    debugCompile 'com.facebook.stetho:stetho:1.4.1'
+    debugImplementation 'com.facebook.stetho:stetho:1.4.1'
 
     def leak_ver = '1.5'
-    debugCompile "com.squareup.leakcanary:leakcanary-android:$leak_ver"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leak_ver"
-    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leak_ver"
-    androidTestCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leak_ver"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leak_ver"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leak_ver"
+    testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leak_ver"
+    androidTestImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leak_ver"
 
     def retrofit_ver = "2.1.0"
-    compile "com.squareup.retrofit2:retrofit:$retrofit_ver"
-    compile "com.squareup.retrofit2:converter-moshi:$retrofit_ver"
-    compile "com.squareup.retrofit2:converter-gson:$retrofit_ver"
-    compile "com.squareup.retrofit2:adapter-rxjava:$retrofit_ver"
-    compile("com.squareup.retrofit2:converter-simplexml:$retrofit_ver") {
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_ver"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_ver"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_ver"
+    implementation "com.squareup.retrofit2:adapter-rxjava:$retrofit_ver"
+    implementation("com.squareup.retrofit2:converter-simplexml:$retrofit_ver") {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
@@ -165,20 +165,20 @@ dependencies {
 
     def junit4 = 'junit:junit:4.12'
     def espresso_ver = '2.2.2'
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_ver", {
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:$espresso_ver", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    androidTestCompile "com.android.support.test.espresso:espresso-contrib:$espresso_ver", {
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espresso_ver", {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude group: 'com.android.support', module: 'design'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     }
-    androidTestCompile junit4
-    testCompile junit4
-    testCompile "org.robolectric:robolectric:3.1.2"
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'org.threeten:threetenbp:1.3.3'
+    androidTestImplementation junit4
+    testImplementation junit4
+    testImplementation "org.robolectric:robolectric:3.1.2"
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.threeten:threetenbp:1.3.3'
 }
 
 /*
