--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'com.github.gfx.ribbonizer'
 apply plugin: 'com.cookpad.android.licensetools'
 apply plugin: 'com.github.triplet.play'
@@ -110,6 +112,8 @@ play {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     def support_ver = "27.1.0"
     implementation "com.android.support:appcompat-v7:$support_ver"
     implementation "com.android.support:design:$support_ver"
@@ -122,7 +126,7 @@ dependencies {
     implementation "com.google.firebase:firebase-crash:$play_services_version"
 
     implementation 'com.google.dagger:dagger:2.7'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
+    kapt 'com.google.dagger:dagger-compiler:2.7'
 
     implementation 'com.jakewharton.timber:timber:4.3.1'
     implementation 'io.reactivex:rxjava:1.2.2'
@@ -132,7 +136,7 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.4'
 
     def orma_version = '3.0.0'
-    annotationProcessor "com.github.gfx.android.orma:orma-processor:$orma_version"
+    kapt "com.github.gfx.android.orma:orma-processor:$orma_version"
     implementation "com.github.gfx.android.orma:orma:$orma_version"
 
     // json
