--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,6 +125,9 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:0.3'
 
+    def lifecycle_version = "1.1.1"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+
     def play_services_version = "10.0.1"
     implementation "com.google.firebase:firebase-core:$play_services_version"
     implementation "com.google.firebase:firebase-crash:$play_services_version"
