--- a/app/build.gradle
+++ b/app/build.gradle
@@ -185,11 +185,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'design'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     }
+    androidTestImplementation "io.mockk:mockk-android:1.8.4"
+    androidTestImplementation "org.assertj:assertj-core:2.9.1"
     androidTestImplementation junit4
+
     testImplementation junit4
     testImplementation "org.robolectric:robolectric:3.1.2"
     testImplementation 'org.mockito:mockito-core:1.10.19'
     testImplementation 'org.threeten:threetenbp:1.3.3'
+    testImplementation "io.mockk:mockk:1.8.4"
+    testImplementation "org.assertj:assertj-core:2.9.1"
 }
 
 /*
