--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ buildscript {
     }
 }
 
+apply from: rootProject.file("versionGenerator.gradle")
+
 allprojects {
     repositories {
         jcenter()
