--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,13 @@ buildscript {
         classpath "com.android.tools.build:gradle:$android_gradle_version"
         // https://github.com/maskarade/gradle-android-ribbonizer-plugin
         classpath 'com.github.gfx.ribbonizer:ribbonizer-plugin:2.1.0'
-        // https://github.com/cookpad/license-tools-plugin
-        classpath 'com.cookpad.android.licensetools:license-tools-plugin:1.2.0'
         // https://github.com/Triple-T/gradle-play-publisher
         classpath 'com.github.triplet.gradle:play-publisher:1.2.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.2.0'
+        classpath "com.google.gms:oss-licenses:0.9.2"
         classpath 'io.fabric.tools:gradle:1.25.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
