--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,19 @@
         android:name=".CustomApplication"
         >
         <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
-        <activity
-            android:name=".ui.feedlist.HatebuFeedActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            >
+        <activity android:name=".presentation.MainActivity"
+                  android:theme="@style/AppTheme.NoActionBar"
+                  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
+        </activity>
+        <activity
+            android:name=".ui.feedlist.HatebuFeedActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
         </activity>
         <activity android:name=".ui.feeddetail.HatebuFeedDetailActivity">
         </activity>
