--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ android:
   - platform-tools
   - build-tools-27.0.3
   - android-27
+  - android-21
+  - sys-img-armeabi-v7a-android-21
 jdk:
   - oraclejdk8
 before_install:
@@ -28,9 +30,13 @@ cache:
 script:
   - "./gradlew :app:testProdDebugUnitTest"
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
+  - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  - sleep 10
+  - adb shell settings put global window_animation_scale 0
+  - adb shell settings put global transition_animation_scale 0
+  - adb shell settings put global animator_duration_scale 0
+  - adb shell input keyevent 82
   - "./gradlew :app:connectedProdDebugAndroidTest"
 notifications:
   slack:
