--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,6 +146,8 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
     implementation "android.arch.persistence.room:rxjava2:$room_version"
+    def work_version = "1.0.0-alpha04"
+    implementation "android.arch.work:work-runtime-ktx:$work_version"
 
     def play_services_version = "10.0.1"
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
@@ -211,6 +213,7 @@ dependencies {
     androidTestImplementation junit4
     androidTestImplementation "android.arch.core:core-testing:$lifecycle_version"
     androidTestImplementation "android.arch.navigation:navigation-testing-ktx:$nav_version"
+    androidTestImplementation "android.arch.work:work-testing:$work_version"
 
     testImplementation junit4
     testImplementation "org.robolectric:robolectric:3.1.2"
