--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,10 +119,13 @@ play {
     }
 }
 
+kotlin.experimental.coroutines "ENABLE"
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.23.3'
 
     def support_ver = "27.1.1"
     implementation "com.android.support:appcompat-v7:$support_ver"
