--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,7 +125,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.23.3'
+    def coroutine_version = "0.23.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
     def support_ver = "27.1.1"
     implementation "com.android.support:appcompat-v7:$support_ver"
