--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:name=".CustomApplication"
         >
         <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
-        <activity android:name=".presentation.MainActivity"
-                  android:theme="@style/AppTheme.NoActionBar"
+        <activity
+            android:name=".ui.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
                   >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
