--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,6 +153,8 @@ dependencies {
     implementation "android.arch.persistence.room:rxjava2:$room_version"
     def work_version = "1.0.0-alpha05"
     implementation "android.arch.work:work-runtime-ktx:$work_version"
+    def paging_version = "1.0.0"
+    implementation "android.arch.paging:runtime:$paging_version"
 
     def play_services_version = "10.0.1"
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
@@ -227,6 +229,7 @@ dependencies {
     testImplementation "io.mockk:mockk:1.8.4"
     testImplementation "org.assertj:assertj-core:2.9.1"
     testImplementation "android.arch.persistence.room:testing:$room_version"
+    testImplementation "android.arch.paging:common:$paging_version"
 }
 
 /*
