--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,6 +167,10 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
+    def koin_version = "0.9.3"
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-android-architecture:$koin_version"
+
     implementation 'com.jakewharton.timber:timber:4.3.1'
     implementation 'io.reactivex:rxjava:1.2.2'
     implementation 'io.reactivex:rxandroid:1.2.1'
