--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.android_gradle_version = "3.2.0-beta05"
-    ext.kotlin_version = '1.2.50'
+    ext.android_gradle_version = "3.2.0-rc01"
+    ext.kotlin_version = '1.2.61'
     repositories {
         jcenter()
         google()
