--- a/app/build.gradle
+++ b/app/build.gradle
@@ -210,6 +210,7 @@ dependencies {
 
     def junit4 = 'junit:junit:4.12'
     def espresso_ver = '2.2.2'
+    def mockk_version = "1.8.6"
     androidTestImplementation("com.android.support.test.espresso:espresso-core:$espresso_ver", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -219,21 +220,23 @@ dependencies {
         exclude group: 'com.android.support', module: 'design'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     }
-    androidTestImplementation "io.mockk:mockk-android:1.8.4"
+    androidTestImplementation "io.mockk:mockk-android:$mockk_version"
     androidTestImplementation "org.assertj:assertj-core:2.9.1"
     androidTestImplementation junit4
     androidTestImplementation "android.arch.core:core-testing:$lifecycle_version"
     androidTestImplementation "android.arch.navigation:navigation-testing-ktx:$nav_version"
     androidTestImplementation "android.arch.work:work-testing:$work_version"
+    androidTestImplementation "org.koin:koin-test:$koin_version"
 
     testImplementation junit4
     testImplementation "org.robolectric:robolectric:3.1.2"
     testImplementation 'org.mockito:mockito-core:1.10.19'
     testImplementation 'org.threeten:threetenbp:1.3.6'
-    testImplementation "io.mockk:mockk:1.8.4"
+    testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation "org.assertj:assertj-core:2.9.1"
     testImplementation "android.arch.persistence.room:testing:$room_version"
     testImplementation "android.arch.paging:common:$paging_version"
+    testImplementation "org.koin:koin-test:$koin_version"
 }
 
 /*
