--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.android_gradle_version = "3.2.0-rc02"
-    ext.kotlin_version = '1.2.61'
+    ext.kotlin_version = '1.2.71'
     repositories {
         jcenter()
         google()
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$android_gradle_version"
+        classpath "com.android.tools.build:gradle:3.2.0"
         // https://github.com/maskarade/gradle-android-ribbonizer-plugin
         classpath 'com.github.gfx.ribbonizer:ribbonizer-plugin:2.1.0'
         // https://github.com/Triple-T/gradle-play-publisher
