Migrate to androidx
Koinのバージョンも上げた（androidxに対応するために必要だった）
androidxへのmigrationにあたりテストコードの修正なども含まれている

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ org.gradle.jvmargs=-Xmx1536m
 filtered_hatebu_pass=android
 filtered_hatebu_alias=androiddebugkey
 filtered_hatebu_key_pass=android
+android.useAndroidX=true
+android.enableJetifier=true
