--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         targetSdkVersion 28
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
         javaCompileOptions {
@@ -98,6 +98,9 @@ android {
             test.resources.srcDirs += "src/mock/assets"
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 ribbonizer {
@@ -129,40 +132,39 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
-    def support_ver = "27.1.1"
-    implementation "com.android.support:appcompat-v7:$support_ver"
-    implementation "com.android.support:design:$support_ver"
-    implementation "com.android.support:recyclerview-v7:$support_ver"
-    implementation "com.android.support:cardview-v7:$support_ver"
-    implementation "com.android.support:customtabs:$support_ver"
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.browser:browser:1.0.0'
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
 
-    implementation 'androidx.core:core-ktx:0.3'
+    implementation 'androidx.core:core-ktx:1.0.0'
 
-    def lifecycle_version = "1.1.1"
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-    implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
-    kapt "android.arch.lifecycle:compiler:$lifecycle_version"
-    def nav_version = "1.0.0-alpha04"
+    def lifecycle_version = "2.0.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    def nav_version = "1.0.0-alpha06"
     implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version"
     implementation "android.arch.navigation:navigation-ui-ktx:$nav_version"
-    def room_version = "1.1.1"
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
-    implementation "android.arch.persistence.room:rxjava2:$room_version"
-    def work_version = "1.0.0-alpha05"
+    def room_version = "2.0.0-rc01"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    def work_version = "1.0.0-alpha09"
     implementation "android.arch.work:work-runtime-ktx:$work_version"
-    def paging_version = "1.0.0"
-    implementation "android.arch.paging:runtime:$paging_version"
+    def paging_version = "2.0.0-rc01"
+    implementation "androidx.paging:paging-runtime:$paging_version"
 
     def play_services_version = "10.0.1"
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
     implementation 'com.google.android.gms:play-services-oss-licenses:15.0.1'
 
-    def koin_version = "0.9.3"
+    def koin_version = "1.0.1"
     implementation "org.koin:koin-android:$koin_version"
-    implementation "org.koin:koin-android-architecture:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     implementation 'com.jakewharton.timber:timber:4.3.1'
     implementation 'io.reactivex:rxjava:1.2.2'
@@ -202,12 +204,11 @@ dependencies {
     }
 
     def junit4 = 'junit:junit:4.12'
-    def espresso_ver = '2.2.2'
-    def mockk_version = "1.8.6"
-    androidTestImplementation("com.android.support.test.espresso:espresso-core:$espresso_ver", {
+    def mockk_version = "1.8.9"
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espresso_ver", {
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude group: 'com.android.support', module: 'design'
@@ -216,19 +217,17 @@ dependencies {
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
     androidTestImplementation "org.assertj:assertj-core:2.9.1"
     androidTestImplementation junit4
-    androidTestImplementation "android.arch.core:core-testing:$lifecycle_version"
+    androidTestImplementation "androidx.arch.core:core-testing:$lifecycle_version"
     androidTestImplementation "android.arch.navigation:navigation-testing-ktx:$nav_version"
     androidTestImplementation "android.arch.work:work-testing:$work_version"
-    androidTestImplementation "org.koin:koin-test:$koin_version"
 
     testImplementation junit4
     testImplementation "org.robolectric:robolectric:3.1.2"
-    testImplementation 'org.mockito:mockito-core:1.10.19'
     testImplementation 'org.threeten:threetenbp:1.3.6'
     testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation "org.assertj:assertj-core:2.9.1"
-    testImplementation "android.arch.persistence.room:testing:$room_version"
-    testImplementation "android.arch.paging:common:$paging_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+    testImplementation "androidx.paging:paging-common:$paging_version"
     testImplementation "org.koin:koin-test:$koin_version"
 }
 
